# impatience

./: .bazelrc  .gitignore  .gitlab-ci.yml  .hie-bios  .weeder.yaml  BUILD.bazel  Dockerfile  Dockerfile.test  LICENSE  README.md  WORKSPACE  azure-pipelines.yml  brittany.yaml  container-root.sh  devcontainer.json  docker-compose.yml  impatience.cabal  impatience.code-workspace  impatience.dhall  package.yaml  stack.yaml  stackage-snapshot.yaml
.devcontainer/: Dockerfile  dev-env-pipeline.yml  devcontainer.json  docker-compose.yml
app/: BUILD.bazel
deploycfg/: dev.yml  service.yml
nginx/: nginx.conf
schema/: destroy-and-recreate.sql
site/: .gitignore  BUILD.bazel  bower.json  index.html  package.json  spago.dhall
site/src/: BUILD.bazel
site/test/: BUILD.bazel
src/: BUILD.bazel  Lib.hs
src/Api/: BUILD.bazel  Job.hs  Progress.hs  Static.hs  Types.hs
src/Database/: BUILD.bazel  Db.hs  Schema.hs  Session.hs  Statement.hs  Types.hs
src/Static/: BUILD.bazel  Entries.hs  Settings.hs
test/: BUILD.bazel  LibSpec.hs  LibTest.hs  Spec.hs  container_command_tests.yml  container_content_tests.yml
test/Test/: Lib.hs
test/Test/Static/: BUILD.bazel  Entries.hs
