name:                impatience
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/csamak/impatience
license:             Apache
license-file:        LICENSE
author:              Cameron Samak
maintainer:          Cameron Samak
copyright:           2018 Cameron Samak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , servant-server
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable impatience-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends:       base
                     , impatience
  default-language:    Haskell2010

test-suite impatience-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , impatience
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  other-modules:
    LibSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/csamak/impatience
