load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(default_visibility = ["//visibility:public"])

haskell_binary(
    name = "impatience-exe",
    srcs = [":Main.hs"],
    compiler_flags = [
        "-O2",
        "-threaded",
        "-rtsopts",
        "-with-rtsopts=-N",
        "-Wall",
        "-Werror",
    ],
    data = [
        "//:impatience.dhall",
    ],
    deps = [
        "//src:Server",
        "@stackage//:base",
    ],
)
