load("@rules_haskell//haskell:defs.bzl", "haskell_library")

package(default_visibility = ["//visibility:public"])

haskell_library(
    name = "Server",
    srcs = glob(["*.hs"]),
    deps = [
        "//src/Api",
        "//src/Database",
        "@stackage//:base",
        "@stackage//:blaze-html",
        "@stackage//:dhall",
        "@stackage//:hasql",
        "@stackage//:hasql-pool",
        "@stackage//:lens",
        "@stackage//:servant-server",
        "@stackage//:servant-swagger",
        "@stackage//:swagger2",
        "@stackage//:text",
        "@stackage//:transformers",
        "@stackage//:wai-logger",
        "@stackage//:warp",
    ],
)
