load("@rules_haskell//haskell:defs.bzl", "haskell_library")

package(default_visibility = ["//visibility:public"])

haskell_library(
    name = "Api",
    srcs = glob(["*.hs"]),
    deps = [
        "//src/Database",
        "//src/Static",
        "@stackage//:aeson",
        "@stackage//:base",
        "@stackage//:blaze-html",
        "@stackage//:either",
        "@stackage//:hasql",
        "@stackage//:servant-blaze",
        "@stackage//:servant-server",
    ],
)
