load("@rules_haskell//haskell:defs.bzl", "haskell_library")

package(default_visibility = ["//visibility:public"])

haskell_library(
    name = "Database",
    srcs = glob(["*.hs"]),
    deps = [
        "@stackage//:aeson",
        "@stackage//:base",
        "@stackage//:hasql",
        "@stackage//:hasql-th",
        "@stackage//:profunctors",
        "@stackage//:text",
        "@stackage//:time",
        "@stackage//:tuple",
        "@stackage//:vector",
    ],
)
