load("@rules_haskell//haskell:defs.bzl", "haskell_library")

package(default_visibility = ["//visibility:public"])

haskell_library(
    name = "Static",
    srcs = glob(["*.hs"]),
    extra_srcs = [
        "//site:impatience-bundle",
    ],
    deps = [
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:cryptonite",
        "@stackage//:template-haskell",
        "@stackage//:text",
        "@stackage//:wai-app-static",
    ],
)
